--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.0",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "pixi.js": "^7.1.1"
   }
 }
