--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/howler": "^2.2.7",
     "@types/jest": "^29.4.0",
     "jest": "^29.4.0",
+    "prettier": "^2.8.3",
+    "prettier-plugin-svelte": "^2.9.0",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
     "tslib": "^2.4.1",
@@ -21,6 +24,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "howler": "^2.2.3",
     "pixi.js": "^7.1.1"
   }
 }
